deploy/kaptn-auth-rbac.yml
---
# Kaptn namespace
apiVersion: v1
kind: Namespace
metadata:
  name: kaptn
