deploy/kaptn-authz-configmap.yml
---
# Create the kaptn namespace if it doesn't exist
apiVersion: v1
kind: Namespace
metadata:
  name: kaptn
  labels:
    name: kaptn
    app.kubernetes.io/name: kaptn
    app.kubernetes.io/component: namespace
