deploy/lb-istio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"istio-ingressgateway","install.operator.istio.io/owning-resource":"unknown","istio":"ingressgateway","istio.io/rev":"default","operator.istio.io/component":"IngressGateways","release":"istio"},"name":"istio-ingressgateway","namespace":"istio-system"},"spec":{"ports":[{"name":"status-port","port":15021,"protocol":"TCP","targetPort":15021},{"name":"http2","port":80,"protocol":"TCP","targetPort":8080},{"name":"h [...]
    metallb.io/ip-allocated-from-pool: default-pool
  creationTimestamp: "2025-08-05T02:57:37Z"
  labels:
    app: istio-ingressgateway
    install.operator.istio.io/owning-resource: unknown
    istio: ingressgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: "1643"
  uid: fc02045b-56ff-4bb0-8a1f-4d659046ecd6
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.107.245.118
  clusterIPs:
  - 10.107.245.118
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: status-port
    nodePort: 31576
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 31258
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 31084
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.122.200
