deploy/kaptn-deploy.yml
# 1. Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: kaptn
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaptn
  namespace: kaptn
  labels:
    app: kaptn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaptn
  template:
    metadata:
      labels:
        app: kaptn
    spec:
      serviceAccountName: kaptn-backend
      terminationGracePeriodSeconds: 10 
      containers:
      - name: kaptn
        image: docker.io/aaronlmathis/kaptn:debug
        imagePullPolicy: Always
        args:
          - "--config=/etc/kaptn/config.yaml"
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 20
          failureThreshold: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command: ["/server", "--health-check"]
          initialDelaySeconds: 20
          periodSeconds: 30
        volumeMounts:
          - name: config
            mountPath: /etc/kaptn
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: kaptn-config
---
# 6) Service
apiVersion: v1
kind: Service
metadata:
  name: kaptn
  namespace: kaptn
spec:
  selector:
    app: kaptn
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort

---
# 7) Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaptn
  namespace: kaptn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kaptn.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kaptn
                port:
                  number: 80
