deploy/test-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-kaptn
  namespace: kaptn
spec:
  podSelector:
    matchLabels:
      app: kaptn
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
